--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
+        <!-- HEADER -->
+        <header>
+            <div class="menu">
+                <div class="row-menu">
+                    <div class="col-menu">
+                        <div class="container1">
+                            <img src="./img/logo-small.png" alt="Logo">
+                            <span>Perchè dropbox</span>
+                            <span>Funzioni</span>
+                            <span>Piani e prezzi</span>
+                        </div>
+                    </div>
+                    <div class="col-menu">
+                        <div class="container1">
+                            <span>Supporto</span>
+                            <span>Contatta l'ufficio vendite</span>
+                            <span>Accedi</span>
+                            <button>Inizia</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- FINE HEADER -->
     </body>
 </html>
