--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>htmlcss-dropbox</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
@@ -16,7 +17,7 @@
             <div class="menu">
                 <div class="row-menu">
                     <div class="col-menu">
-                        <div class="container1">
+                        <div class="container-menu">
                             <img src="./img/logo-small.png" alt="Logo">
                             <span>Perchè dropbox</span>
                             <span>Funzioni</span>
@@ -24,7 +25,7 @@
                         </div>
                     </div>
                     <div class="col-menu">
-                        <div class="container1">
+                        <div class="container-menu">
                             <span>Supporto</span>
                             <span>Contatta l'ufficio vendite</span>
                             <span>Accedi</span>
@@ -35,5 +36,28 @@
             </div>
         </header>
         <!-- FINE HEADER -->
+
+        <!-- MAIN -->
+        <main>
+            <!-- SEZIONE 1 -->
+            <section class="section1">
+                <div class="section1-full-container">
+                    <div class="row-section1">
+                        <div class="col-section1">
+                            <h2>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h2>
+                            <div class="section1-container">
+                                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                                <button>Inizia la tua prova gratuita</button>
+                                <p>Annulla in qualsiasi momento</p>
+                                <i class="fa-solid fa-arrow-down" style="color: #000000;"></i>
+                                <img src="./img/jumbo.png" alt="jumbo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 1 -->
+        </main>
+        <!-- FINE MAIN -->
     </body>
 </html>
