--- a/index.html
+++ b/index.html
@@ -57,6 +57,163 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 1 -->
+
+            <!-- INIZIO SEZIONE 2 -->
+            <section class="section2">
+                <h3>Trova il piano business che fa per te</h3>
+                <div class="inpunt">
+                    <input type="radio">
+                    <label>Fatturazione mensile</label>
+                    <input type="radio">
+                    <label>Fatturazione annuale</label>
+                </div>
+                <div class="section2-full-container">
+                    <div class="row-section2">
+                        <div class="col-section2">
+                            <div class="section2-container">
+                                <h4> <i class="fa-solid fa-user" style="color: #000000;"></i> Singolo</h4>
+                                <ul class="padding">
+                                    <li>
+                                        <h5>Professional</h5>
+                                    </li>
+                                    <li>
+                                        <strong>&euro; 12.00</strong>
+                                    </li>
+                                    <li class="chiaro">
+                                        /mese
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-user" style="color: #000000;"></i> 1 utente
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder" style="color: #000000;"></i> 5 TB di spazio di archivazione sicuro
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes" style="color: #000000;"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                                    </li>
+                                    <li>
+                                        <button>Prova gratis per 30 giorni</button>
+                                    </li>
+                                    <li>
+                                        <p>oppure <a href="#">acquista ora</a></p>
+                                    </li>
+                                    <li>
+                                        <hr>
+                                    </li>
+                                    <li>
+                                        <h6>Punti salienti del piano</h6>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Cartelle offline su dispositivi mobili
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-section2">
+                            <div class="section2-container">
+                                <h4><i class="fas fa-users" style="color: #000000;"></i> Team</h4>
+                                <ul>
+                                    <li>
+                                        <h5>Advancer</h5>
+                                    </li>
+                                    <li>
+                                        <strong>&euro; 18.00</strong>
+                                    </li>
+                                    <li class="chiaro">
+                                        /utente/mese
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-user" style="color: #000000;"></i> 3 o più utenti
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder" style="color: #000000;"></i> Tutto lo spazio di cui ha bisogno il tuo team
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes" style="color: #000000;"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                    </li>
+                                    <li>
+                                        <button>Prova gratis per 30 giorni</button>
+                                    </li>
+                                    <li>
+                                        <p>oppure <a href="#">acquista ora</a></p>
+                                    </li>
+                                    <li>
+                                        <hr>
+                                    </li>
+                                    <li>
+                                        <h6>Punti salienti del piano</h6>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Cartelle offline su dispositivi mobili
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Risparmio del 50% rispetto alle iscrizioni singole
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Possibilità di inserire nuovi membri del team
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i>  Gestione dei permessi in base al ruoli
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-section2">
+                            <div class="section2-container">
+                                <h4><i class="fa-solid fa-building" style="color: #000000;"></i> Azienda</h4>
+                                <ul class="padding1">
+                                    <li>
+                                        <h5>Enterprise</h5>
+                                    </li>
+                                    <li>
+                                        <strong>Contattaci</strong> 
+                                    </li>
+                                    <li class="chiaro">
+                                        -
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-user" style="color: #000000;"></i> 10 o più utenti
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder" style="color: #000000;"></i> Soluzioni personalizzabili per la tua azienda
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes" style="color: #000000;"></i> Assistenza personalizzata per autare gli amministratori in una gestione su larga scala
+                                    </li>
+                                    <li>
+                                        <button>Prova gratis per 30 giorni</button>
+                                    </li>
+                                    <li>
+                                        <p>oppure <a href="#">acquista ora</a></p>
+                                    </li>
+                                    <li>
+                                        <hr>
+                                    </li>
+                                    <li>
+                                        <h6>Punti salienti del piano</h6>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Cartelle offline su dispositivi mobili
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Servizio assistenza 24/h
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check" style="color: #005eff;"></i> Possibilità di personalizzazione totale
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 2 -->
         </main>
         <!-- FINE MAIN -->
     </body>
