--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="col-section2">
                             <div class="section2-container">
                                 <h4> <i class="fa-solid fa-user" style="color: #000000;"></i> Singolo</h4>
-                                <ul class="padding">
+                                <ul>
                                     <li>
                                         <h5>Professional</h5>
                                     </li>
@@ -167,7 +167,7 @@
                         <div class="col-section2">
                             <div class="section2-container">
                                 <h4><i class="fa-solid fa-building" style="color: #000000;"></i> Azienda</h4>
-                                <ul class="padding1">
+                                <ul>
                                     <li>
                                         <h5>Enterprise</h5>
                                     </li>
@@ -214,6 +214,25 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 2 -->
+            <!-- INIZIO SEZIONE 3 -->
+            <section class="section3">
+                <h4><i class="fa-solid fa-building" style="color: #000000;"></i> Team</h4>
+                <div class="row-section3">
+                    <div class="col-section3">
+                        <div class="section3-container">
+                            <h3>Enterprise</h3>
+                            <p><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                        </div>
+                    </div>
+                    <div class="col1-section3">
+                        <div class="section3-container">
+                            <button>Contatta l'ufficio vendite</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 3 -->
         </main>
         <!-- FINE MAIN -->
     </body>
