--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 3 -->
+
+            <!-- INIZIO SEZIONE 4 -->
+            <section class="section4">
+                <div class="row-section4">
+                    <div class="col-section4">
+                        <div class="section4-container">
+                            <img src="./img/partner.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col1-section4">
+                        <div class="section4-container">
+                            <h2>Entra in contatto con un partner Dropbox</h2>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                            <button>Trova un partner</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 4 -->
         </main>
         <!-- FINE MAIN -->
     </body>
