--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="row-section4">
                     <div class="col-section4">
                         <div class="section4-container">
-                            <img src="./img/partner.png" alt="">
+                            <img src="./img/partner.png" alt="Partner">
                         </div>
                     </div>
                     <div class="col1-section4">
@@ -252,6 +252,56 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 4 -->
+
+            <!-- INIZIO SEZIONE 5 -->
+            <section class="section5">
+                <div class="row-section5">
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-switching-tools.png" alt="switching-tools">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-send-files-it.png" alt="send-files">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-coordinate-it.png" alt="coordinate">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-integrations-it.png" alt="integrations">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-multi-device.png" alt="multi-device">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <div class="col-section5">
+                        <div class="section5-container">
+                            <img src="./img/business-feature-security.png" alt="security">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 5 -->
         </main>
         <!-- FINE MAIN -->
     </body>
