--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 5 -->
+
+            <!-- INIZIO SEZIONE 6 -->
+            <section class="section6">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </section>
+            <!-- FINE SEZIONE 6 -->
         </main>
         <!-- FINE MAIN -->
     </body>
