--- a/index.html
+++ b/index.html
@@ -302,13 +302,75 @@
                 </div>
             </section>
             <!-- FINE SEZIONE 5 -->
-
             <!-- INIZIO SEZIONE 6 -->
             <section class="section6">
                 <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </section>
             <!-- FINE SEZIONE 6 -->
+            
+            <!-- INIZIO SEZIONE 7 -->
+
+            <section class="section7">
+                <div class="row-section7">
+                    <div class="col-section7">
+                        <div class="row1-section7">
+                            <div class="col1-section7 green">
+                                <div class="section7-container">
+                                    <img src="./img/designit.svg" alt="designit">
+                                </div>
+                            </div>
+                            <div class="col1-section7 brown">
+                                <div class="section7-container">
+                                    <img src="./img/arizona_state_university.svg" alt="arizona_state_university">
+                                </div>
+                            </div>
+                            <div class="col1-section7 heavenly">
+                                <div class="section7-container">
+                                    <img src="./img/university_of_florida.svg" alt="university_of_florida">
+                                </div>
+                            </div>
+                            <div class="col1-section7 light-red">
+                                <div class="section7-container">
+                                    <img src="./img/topps.svg" alt="topps">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-section7 grey center">
+                        <img src="./img/designit.svg" alt="designit"> 
+                        <hr> 
+                        <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>  
+                        <p>Morten Thomsen, Global IT Lead</p> 
+                    </div>
+                    <div class="col-section7">
+                        <div class="row1-section7">
+                            <div class="col1-section7 red">
+                                <div class="section7-container">
+                                    <img src="./img/world_bicycle_relief.svg" alt="world_bicycle">
+                                </div>
+                            </div>
+                            <div class="col1-section7 light-heavenly">
+                                <div class="section7-container">
+                                    <img src="./img/hearst_corp.svg" alt="hearst">
+                                </div>
+                            </div>
+                            <div class="col1-section7 blue">
+                                <div class="section7-container">
+                                    <img src="./img/lonely_planet.svg" alt="lonely_planet">
+                                </div>
+                            </div>
+                            <div class="col1-section7 yellow">
+                                <div class="section7-container">
+                                    <img src="./img/clear_channel.svg" alt="clear_channel">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- FINE SEZIONE 7 -->
         </main>
         <!-- FINE MAIN -->
     </body>
