--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <!-- FINE SEZIONE 5 -->
             <!-- INIZIO SEZIONE 6 -->
             <section class="section6">
-                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </section>
             <!-- FINE SEZIONE 6 -->
@@ -371,6 +371,19 @@
             </section>
 
             <!-- FINE SEZIONE 7 -->
+
+            <!-- INIZIO SEZIONE 8 -->
+            <section class="section8">
+                <div class="row-section8">
+                    <div class="col-section8">
+                        <h2>Porta Dropbox Business <br> nella tua azienda.</h2> 
+                    </div>
+                    <div class="col-section8">
+                        <button>Inizia la tua prova gratuita</button>
+                    </div>
+                </div>   
+            </section>
+            <!-- FINE SEZIONE 8 -->
         </main>
         <!-- FINE MAIN -->
     </body>
