--- a/index.html
+++ b/index.html
@@ -384,6 +384,42 @@
                 </div>   
             </section>
             <!-- FINE SEZIONE 8 -->
+
+            <!-- INIZIO SEZIONE 9 -->
+            <section class="section9">
+                <div class="row-section9">
+                    <div class="col-section9">
+                        <div class="section9-container">
+                            <h2>Domande frequenti</h2>
+                            <hr>
+                            <details>
+                                <summary class="margin-top"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong> <span class="arrow"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                                <p>Il pacchetto Professional + eSign fornisce più spazio di archiviazione e un metodo semplice per richiedere o aggiungere firme elettroniche illimitate, valide ai fini legali, ai documenti archiviati grazie a un semplice flusso di lavoro Dropbox.</p>
+                            </details>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="col-section9">
+                        <div class="section9-container">
+                            <details>
+                                <summary><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong> <span class="arrow"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                                <p>Porta a termine tutte le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud, come Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper, direttamente da Dropbox.</p>
+                            </details>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="col-section9">
+                        <div class="section9-container">
+                            <details>
+                                <summary><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong> <span class="arrow"><i class="fa-solid fa-chevron-down"></i></span></summary>
+                                <p>Con il pacchetto Standard + DocSend ricevi analisi in tempo reale, controlli avanzati dei documenti, spazi personalizzati per i documenti e altro.</p>
+                            </details>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- FINE SEZIONE 9 -->
         </main>
         <!-- FINE MAIN -->
     </body>
