--- a/index.html
+++ b/index.html
@@ -374,14 +374,16 @@
 
             <!-- INIZIO SEZIONE 8 -->
             <section class="section8">
-                <div class="row-section8">
-                    <div class="col-section8">
-                        <h2>Porta Dropbox Business <br> nella tua azienda.</h2> 
+                <div class="section8-1">
+                    <div class="row-section8">
+                        <div class="col-section8">
+                            <h2>Porta Dropbox Business <br> nella tua azienda.</h2> 
+                        </div>
+                        <div class="col-section8">
+                            <button>Inizia la tua prova gratuita</button>
+                        </div>
                     </div>
-                    <div class="col-section8">
-                        <button>Inizia la tua prova gratuita</button>
-                    </div>
-                </div>   
+                </div>
             </section>
             <!-- FINE SEZIONE 8 -->
 
@@ -422,5 +424,138 @@
             <!-- FINE SEZIONE 9 -->
         </main>
         <!-- FINE MAIN -->
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer">
+                <div class="row-footer">
+                    <div class="col-footer">
+                        <div class="container-footer">
+                            <ul>
+                                <li>
+                                    <h2>Dropbox</h2>
+                                </li>
+                                <li>
+                                    Applicazione desktop
+                                </li>
+                                <li>
+                                    Perché Dropbox
+                                </li>
+                                <li>
+                                    Piani
+                                </li>
+                                <li>
+                                    Sicurezza
+                                </li>
+                                <li>
+                                    funzioni
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-footer">
+                        <div class="container-footer">
+                            <ul>
+                                <li>
+                                    <h2>Prodotti</h2>
+                                </li>
+                                <li>
+                                    Applicazione desktop                                </li>
+                                <li>
+                                    Perché Dropbox
+                                </li>
+                                <li>
+                                    Piani
+                                </li>
+                                <li>
+                                    Sicurezza
+                                </li>
+                                <li>
+                                    funzioni
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-footer">
+                        <div class="container-footer">
+                            <ul>
+                                <li>
+                                    <h2>Azienda</h2>
+                                </li>
+                                <li>
+                                    Applicazione desktop
+                                </li>
+                                <li>
+                                    Perché Dropbox
+                                </li>
+                                <li>
+                                    Piani
+                                </li>
+                                <li>
+                                    Sicurezza
+                                </li>
+                                <li>
+                                    funzioni
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-footer">
+                        <div class="container-footer">
+                            <ul>
+                                <li>
+                                    <h2>Supporto</h2>
+                                </li>
+                                <li>
+                                    Applicazione desktop
+                                </li>
+                                <li>
+                                    Perché Dropbox
+                                </li>
+                                <li>
+                                    Piani
+                                </li>
+                                <li>
+                                    Sicurezza
+                                </li>
+                                <li>
+                                    funzioni
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-footer">
+                        <div class="container-footer">
+                            <ul>
+                                <li>
+                                    <h2>Community</h2>
+                                </li>
+                                <li>
+                                    Applicazione desktop
+                                </li>
+                                <li>
+                                    Perché Dropbox
+                                </li>
+                                <li>
+                                    Piani
+                                </li>
+                                <li>
+                                    Sicurezza
+                                </li>
+                                <li>
+                                    funzioni
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <details>
+                    <summary><i class="fa-solid fa-earth-americas"></i> Italiano  <i class="fa-solid fa-caret-up"></i></summary>
+                    <p>English</p>
+                </details>
+            </div>
+        </footer>
+        <!-- FINE FOOTER -->
     </body>
 </html>
